crates/toml_edit/tests/snapshots/invalid/key/partial-quoted.stderr
TOML parse error at line 1, column 1
  |
1 | partial"quoted" = 5
  | ^
invalid basic string, expected `"`
